[package]
name = "quicksilver-webpki"
description = "fold in the cheese"
version = "1.3.3"
edition = "2021"
rust-version = "1.74"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
clap-verbosity-flag = "2.2"
rpassword = "7"
log = "0.4"
env_logger = "0.11"
webpki-root-certs = "0.26.5"
volonym = { git = "https://github.com/holonym-foundation/vole-zk-prover.git" } 

[dev-dependencies]
assert_cmd = "2.0"
assert_fs = "1.1"
predicates = "3.1"

[build-dependencies]
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
clap-verbosity-flag = "2.2"
clap_mangen = { version = "0.2" }
path-absolutize = "3.1"
printpdf = { version = "0.7.0", features = ["svg"] }
